0.5.0
- Feature: Add teasers to the event records (#625)
- Change: Changed localization to have a ":" after each label in the BE (#571)
- Change: Add 3 additional "speaker" fields in the event record (#550)
- Fix: Allow for searching also within organizer names (#352)
- Fix: Corrected error message on my_events page when not logged in (#529)
- Change: Rework the order of tabs when BE-editing events (#578)
- Change: BE editing of event records: Move "registration necessary" and "multiple registration allowed" to the "registration" tab (#562)
- Change: Statistics are updated on every change of event records (#242)
- Fix: In mod1 and mod2, lowercase POST (#597)
- Fix: Configuration check on the wrong object in pi1::createRegistrationsList() (#584)
- Fix: Typo in pi1/locallang.xml (#583)
- Feature: CSV export for registrations: data structures and architectural stuff (#313)
- Feature: Add integer field "number of kids" to the attendance record, the registration form, the thank-you and notification e-mails (#452)
- Feature: Add data type "food type" and allow to select records in the event records and in the registration form (#449, #450)
- Feature: Add data type "lodging" and allow to select records in the event records and in the registration form (#445, #446)
- Change: BE editing of event records: Only show the registration-related fields if registration is enabled for this event (#575)
- Feature: Add a field "folder for registration records" to the organizer records (#465)
- Change: "Terms" should be a default field in the registration form (#574)
- Change: Add a second "terms" checkbox to the registration form (#547. #579)
- Feature: Add record type for checkboxes in the registration form (#436, #566)
- Feature: New BE module: event list, registration list, speaker list and organizer list (#279, #509, #543, #591, #546, #598, #596, #599, #617, #609, #608)
- Fix: Ordering of seminars doesn't work with MySQL Version 4.1.21 (#500)