@@ -113,8 +113,10 @@ CREATE TABLE tx_seminars_seminars (
 	leaders int(11) unsigned DEFAULT '0' NOT NULL,
 	price_regular decimal(7,2) DEFAULT '0.00' NOT NULL,
 	price_regular_early decimal(7,2) DEFAULT '0.00' NOT NULL,
+	price_regular_board decimal(7,2) DEFAULT '0.00' NOT NULL,
 	price_special decimal(7,2) DEFAULT '0.00' NOT NULL,
 	price_special_early decimal(7,2) DEFAULT '0.00' NOT NULL,
+	price_special_board decimal(7,2) DEFAULT '0.00' NOT NULL,
 	additional_information text NOT NULL,
 	payment_methods tinytext NOT NULL,
 	organizers tinytext NOT NULL,
