@@ -123,10 +123,16 @@
 <!-- ###FIELD_WRAPPER_PRICE_REGULAR### --><!-- ###FIELD_WRAPPER_PRICE_EARLYBIRD_SPECIAL### --><h3>###LABEL_PRICE_EARLYBIRD_SPECIAL###</h3>
 <p>###PRICE_EARLYBIRD_SPECIAL### (###MESSAGE_EARLYBIRD_PRICE_SPECIAL###)</p>
 
-<!-- ###FIELD_WRAPPER_PRICE_EARLYBIRD_SPECIAL### --><!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><h3>###LABEL_PRICE_SPECIAL###</h3>
+<!-- ###FIELD_WRAPPER_PRICE_EARLYBIRD_SPECIAL### --><!-- ###FIELD_WRAPPER_PRICE_BOARD_REGULAR### --><h3>###LABEL_PRICE_BOARD_REGULAR###</h3>
+<p>###PRICE_BOARD_REGULAR###</p>
+
+<!-- ###FIELD_WRAPPER_PRICE_BOARD_REGULAR### --><!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><h3>###LABEL_PRICE_SPECIAL###</h3>
 <p>###PRICE_SPECIAL###</p>
 
-<!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><!-- ###FIELD_WRAPPER_ADDITIONAL_INFORMATION### -->###ADDITIONAL_INFORMATION###
+<!-- ###FIELD_WRAPPER_PRICE_SPECIAL### --><!-- ###FIELD_WRAPPER_PRICE_BOARD_SPECIAL### --><h3>###LABEL_PRICE_BOARD_SPECIAL###</h3>
+<p>###PRICE_BOARD_SPECIAL###</p>
+
+<!-- ###FIELD_WRAPPER_PRICE_BOARD_SPECIAL### --><!-- ###FIELD_WRAPPER_ADDITIONAL_INFORMATION### -->###ADDITIONAL_INFORMATION###
 
 <!-- ###FIELD_WRAPPER_ADDITIONAL_INFORMATION### --><!-- ###FIELD_WRAPPER_PAYMENTMETHODS### --><h3>###LABEL_PAYMENTMETHODS###</h3>
 ###PAYMENTMETHODS###
